--- a/src/app/shared/buscador/buscador.component.html
+++ b/src/app/shared/buscador/buscador.component.html
@@ -5,15 +5,15 @@
 
 <form class="example-form">
     <mat-form-field class="example-full-width">
-      <mat-label>Nombre</mat-label>
+      <mat-label>{{tituloBusqueda}}</mat-label>
       <input type="text"
              placeholder="buscar..."
              matInput
              [formControl]="buscadorInput"
              [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
-        @for (option of listFiltroValores ; track option.id) {
-          <mat-option [value]="option.nombre">{{option.nombre}}</mat-option>
+        @for (option of listFiltroValores ; track option) {
+          <mat-option [value]="option">{{option}}</mat-option>
         }
       </mat-autocomplete>
     </mat-form-field>
