--- a/src/app/shared/modal-confirmation/modal-confirmation.component.html
+++ b/src/app/shared/modal-confirmation/modal-confirmation.component.html
@@ -1,7 +1,5 @@
-<h2 mat-dialog-title>¿Esta seguro que desea eliminar el cliente: {{data.nombre}} ?</h2>
+<h2 mat-dialog-title>¿Está seguro que desea eliminar el registro ?</h2>
 <mat-dialog-content>
-
-
     <div class="content-buttons-confirm">
        <button mat-flat-button color="primary" (click)="onCancel()"  >Cancelar</button>
        <button mat-flat-button  color="warn" (click)="onSave()" >Eliminar</button>
