--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -105,3 +105,32 @@ form.grid{
     font-weight: bold;
 
 }
+.rowform{
+    margin-top: 20px;
+}
+.card-title-tab {
+    background-color: #1469C0;
+    border-radius: 6px 6px 2px 2px;
+    height: 48px;
+    /* text-align: center; */
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    padding-left: 15px;
+    color: #fff;
+    font-size: 18px;
+}
+.flex-buttons-pedido{
+    display: flex;
+    gap: 15px;
+    padding-top: 8px;
+}
+.contain-buscador-reporte {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.content-btn-buscar {
+    padding-bottom: 16px;
+}
