--- a/src/app/reporte-pedido/reporte-pedido.component.html
+++ b/src/app/reporte-pedido/reporte-pedido.component.html
@@ -1,1 +1,55 @@
-<p>reporte-pedido works!</p>
+<div  class="logo-contain">
+    <span class="page-name">Reportes</span>
+</div>
+
+
+<div class="contain-table">
+
+    <div class="contain-buscador-reporte">
+    <div class="content-buscador">
+      <app-buscador [lista]="listaBusqueda" [tituloBusqueda]="titleBusqueda"  (inputBusqueda)="BuscarbyDni($event)"   ></app-buscador> 
+    </div>
+     <div class="content-btn-buscar">
+      <button mat-flat-button (click)="buscarLibrosAlquilados()" >Buscar</button>
+     </div>
+    </div>
+  @if(dataSource.length==0 && DniBusqueda!="" && flatError>0){
+    <mat-error>No tiene libros alquilados</mat-error>
+  }
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
+      
+        <!-- Weight Column -->
+        <ng-container matColumnDef="autor">
+          <th mat-header-cell *matHeaderCellDef> Autor</th>
+          <td mat-cell *matCellDef="let element"> {{element.autor}} </td>
+        </ng-container>
+      
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="isbn">
+          <th mat-header-cell *matHeaderCellDef> ISBN </th>
+          <td mat-cell *matCellDef="let element"> {{element.isbn}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.estado? "Activo": "Inactivo" }} </td>
+          </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+</div>
+
+
