--- a/src/app/clientes/update-clientes/update-clientes.component.html
+++ b/src/app/clientes/update-clientes/update-clientes.component.html
@@ -52,6 +52,9 @@
         }
     </mat-form-field>
 </div>
+@if( mensajeErrorUpdate!="" && mensajeErrorUpdate){
+<mat-error>{{mensajeErrorUpdate}}</mat-error>
+}
     <div class="content-buttons">
         <button mat-flat-button color="warn"  (click)="onclose()" >Cancelar</button>
         <button mat-flat-button color="primary"  type="submit" (click)="onGuardar()" [disabled]="validarBotonGuardar()" >Guardar</button>
