--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -15,12 +15,9 @@
       Nuevo</button>
   </div>
 </div>
-
+<div class="content-table-paginator">
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
     <!-- Position Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -78,5 +75,5 @@
                [hidePageSize]="false"
                aria-label="Select page">
 </mat-paginator>
-
+</div>
 </div>
