--- a/src/app/libros/libros.component.html
+++ b/src/app/libros/libros.component.html
@@ -15,7 +15,7 @@
         Nuevo</button>
     </div>
   </div>
-  
+  <div class="content-table-paginator">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
       <!--- Note that these columns can be defined in any order.
@@ -78,5 +78,5 @@
                  [hidePageSize]="false"
                  aria-label="Select page">
   </mat-paginator>
-  
+  </div>
   </div>
